# mcp-declarative-java-sdk

./: .editorconfig  .gitignore  404.html  LICENSE  README.adoc  README.md  index.html  pom.xml  sitemap.xml
.github/workflows/: deploy-docs.yml  maven-build.yml
docs/: mkdocs.yml  pyproject.toml
docs/docs/: getting-started.md  getting_started.md  index.md
docs/site/: 404.html  index.html  sitemap.xml
docs/site/getting_started/: index.html
docs/site/search/: search_index.json
getting-started/: index.html
search/: search_index.json
src/main/java/com/github/codeboyzhou/mcp/declarative/: McpServers.java
src/main/java/com/github/codeboyzhou/mcp/declarative/annotation/: McpComponentScan.java  McpI18nEnabled.java  McpJsonSchemaDefinition.java  McpJsonSchemaDefinitionProperty.java  McpPrompt.java  McpPromptParam.java  McpPrompts.java  McpResource.java  McpResources.java  McpServerApplication.java  McpTool.java  McpToolParam.java  McpTools.java
src/main/java/com/github/codeboyzhou/mcp/declarative/common/: BufferQueue.java  GuiceInjectorModule.java  Immutable.java  InjectorModule.java  (+2 more)
src/main/resources/: mcp-server-default.yml  mcp-server.yml
src/test/java/com/github/codeboyzhou/mcp/declarative/: McpServersTest.java
src/test/resources/: logback.xml  mcp-server-async.yml  mcp-server-not-enabled.yml  mcp-server-sse-mode.yml  mcp-server.yml  test-mcp-server-disabled.yml  test-mcp-server-enable-http-sse-mode.yml  test-mcp-server-enable-stdio-mode.yml  test-mcp-server-enable-streamable-http-mode.yml  test-mcp-server-enable-unknown-mode.yml
(+148 files in other folders)
