[project]
name = "mcp-declarative-java-sdk-docs"
version = "0.6.0"
description = "Documentation site for project https://github.com/codeboyzhou/mcp-declarative-java-sdk"
authors = [
    { name = "codeboyzhou", email = "imzhouchen@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.6.15"
]
